2022-1/luan-camille-gabrielly-lucas-nicholas/.metadata/.plugins/org.eclipse.cdt.ui/motor-cc.build.log
16:20:01 **** Incremental Build of configuration Debug for project motor-cc ****
make -j8 all 
arm-none-eabi-gcc "../Core/Src/main.c" -mcpu=cortex-m0plus -std=gnu11 -g3 -DDEBUG -DUSE_HAL_DRIVER -DSTM32G0B1xx -c -I../Core/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc -I../Drivers/STM32G0xx_HAL_Driver/Inc/Legacy -I../Drivers/CMSIS/Device/ST/STM32G0xx/Include -I../Drivers/CMSIS/Include -O0 -ffunction-sections -fdata-sections -Wall -fstack-usage -MMD -MP -MF"Core/Src/main.d" -MT"Core/Src/main.o" --specs=nano.specs -mfloat-abi=soft -mthumb -o "Core/Src/main.o"
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:1:1: warning: multi-line comment [-Wcomment]
    1 | // -------------------------------------------------- \\
      | ^
../Core/Src/main.c: In function 'main':
../Core/Src/main.c:271:22: error: 'LES_GPIO_Port' undeclared (first use in this function); did you mean 'LED_GPIO_Port'?
  271 |    HAL_GPIO_WritePin(LES_GPIO_Port, LES_Pin, 1);
      |                      ^~~~~~~~~~~~~
      |                      LED_GPIO_Port
../Core/Src/main.c:271:22: note: each undeclared identifier is reported only once for each function it appears in
../Core/Src/main.c:271:37: error: 'LES_Pin' undeclared (first use in this function); did you mean 'LED_Pin'?
  271 |    HAL_GPIO_WritePin(LES_GPIO_Port, LES_Pin, 1);
      |                                     ^~~~~~~
      |                                     LED_Pin
../Core/Src/main.c:272:22: error: 'LDI_GPIO_Port' undeclared (first use in this function); did you mean 'LED_GPIO_Port'?
  272 |    HAL_GPIO_WritePin(LDI_GPIO_Port, LDI_Pin, 1);
      |                      ^~~~~~~~~~~~~
      |                      LED_GPIO_Port
../Core/Src/main.c:272:37: error: 'LDI_Pin' undeclared (first use in this function); did you mean 'LED_Pin'?
  272 |    HAL_GPIO_WritePin(LDI_GPIO_Port, LDI_Pin, 1);
      |                                     ^~~~~~~
      |                                     LED_Pin
../Core/Src/main.c:273:22: error: 'LED3_GPIO_Port' undeclared (first use in this function); did you mean 'LED_GPIO_Port'?
  273 |    HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, 0);
      |                      ^~~~~~~~~~~~~~
      |                      LED_GPIO_Port
../Core/Src/main.c:273:38: error: 'LED3_Pin' undeclared (first use in this function); did you mean 'LED_Pin'?
  273 |    HAL_GPIO_WritePin(LED3_GPIO_Port, LED3_Pin, 0);
      |                                      ^~~~~~~~
      |                                      LED_Pin
../Core/Src/main.c:287:40: warning: passing argument 2 of 'LoRa_receive' from incompatible pointer type [-Wincompatible-pointer-types]
  287 |    packet_size = LoRa_receive(&myLoRa, received_data, 1);
      |                                        ^~~~~~~~~~~~~
      |                                        |
      |                                        uint32_t * {aka long unsigned int *}
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:125:44: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint32_t *' {aka 'long unsigned int *'}
  125 | uint8_t LoRa_receive(LoRa* _LoRa, uint8_t* data, uint8_t length);
      |                                   ~~~~~~~~~^~~~
../Core/Src/main.c:315:27: warning: passing argument 2 of 'LoRa_transmit' from incompatible pointer type [-Wincompatible-pointer-types]
  315 |    LoRa_transmit(&myLoRa, &currente, 1, 100);
      |                           ^~~~~~~~~
      |                           |
      |                           uint32_t * {aka long unsigned int *}
In file included from ../Core/Src/main.c:25:
../Core/Inc/LoRa.h:123:45: note: expected 'uint8_t *' {aka 'unsigned char *'} but argument is of type 'uint32_t *' {aka 'long unsigned int *'}
  123 | uint8_t LoRa_transmit(LoRa* _LoRa, uint8_t* data, uint8_t length, uint16_t timeout);
      |                                    ~~~~~~~~~^~~~
make: *** [Core/Src/subdir.mk:37: Core/Src/main.o] Error 1
"make -j8 all" terminated with exit code 2. Build might be incomplete.

16:20:01 Build Failed. 7 errors, 3 warnings. (took 273ms)

